--- a/Mission06_sdcable/Views/Home/Index.cshtml
+++ b/Mission06_sdcable/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">The Joel Hilton Film Collection</h1>
+    <h1 class="display-4">The Joel Hilton Film Collection</h1> <!--Home page with a pic of Professor Hilton's brother-->
     <img src="~/img/Hilton.jpg" />
     
 </div>
