--- a/Mission06_sdcable/Views/Home/AddMovie.cshtml
+++ b/Mission06_sdcable/Views/Home/AddMovie.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="POST">
+        <form method="POST"> <!--Creating the form for inputs for each of the important factors.-->
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
