Added an actual page for the podcasts

--- a/Mission06_sdcable/Views/Shared/_Layout.cshtml
+++ b/Mission06_sdcable/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddMovie">Add Movie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://baconsale.com" target="_blank">My Podcasts</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Podcasts">Podcasts</a>
                         </li>
                     </ul>
                 </div>
