--- a/Mission06_sdcable/Views/Home/AddMovie.cshtml
+++ b/Mission06_sdcable/Views/Home/AddMovie.cshtml
@@ -9,11 +9,17 @@
 <div class="row">
     <div class="col-md-4">
         <form method="POST"> <!--Creating the form for inputs for each of the important factors.-->
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <label asp-for="Category" class="control-label"></label><br />
+                <select asp-for="CategoryId">
+                    <option value="">Select a Category</option>
+                    @foreach(CategoriesModel c in ViewBag.Category)
+                    {
+                        <option value="@c.CategoryId">@c.Category</option>
+                    }
+                </select>
+                <br />
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -40,7 +46,7 @@
                 </select>
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group">
                 <label asp-for="Edited" class="control-label"></label>
                 <select asp-for="Edited" class="form-control">
                     <option value="False">No</option>
