--- a/Mission06_sdcable/Views/Home/ViewMovies.cshtml
+++ b/Mission06_sdcable/Views/Home/ViewMovies.cshtml
@@ -5,6 +5,8 @@
 
 <h1>Welcome, and enjoy viewing the movie's here</h1>
 
+
+<!--Set up table-->
 <table class="table-bordered table-primary">
     <thead class="font-weight-bolder text-center">
         <tr>
@@ -19,6 +21,7 @@
         </tr>
     </thead>
 
+    <!--For each object in the model, display information.-->
     <tbody>
         @foreach(var data in Model)
             {
